1.1.0 (2009-07-X)
	* Allow root users to disable components (and enable them again).

1.0.1 (2009-07-05)
    * Menu option to reload the list.
    * Menu option to expand or collapse all groups in one go.

1.0.0 (2009-06-26)
    Initial release.