@@ -195,4 +195,6 @@
 	<string name="act_appwidget_disabled_detail">The last copy of a widget was removed.</string>
 	<string name="act_appwidget_deleted">Widget deleted</string>
 	<string name="act_appwidget_deleted_detail">A copy of a widget was removed. Note that most widgets support multiple copies.</string>
+	<string name="act_phone_state_changed">Phone state changed</string>
+	<string name="act_phone_state_changed_detail">The call state of the phone has changed, for example when a new call is coming in, a call is accepted, or a previously active call ends.</string>
 </resources>
